--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=develop nodemon --exec babel-node index.js",
-    "prod": "cross-env NODE_ENV=product babel-node index.js"
+    "dev": "npm run start",
+		"prod": "cross-env NODE_ENV=product babel-node index.js"
   },
   "author": "Bruce Hsu (bruce0205@gmail.com)",
   "license": "MIT",
